# ROVIK

./: .gitignore  README.md  docker-compose.yml
apps/api/: .coverage.Vicky.pid27020.XAYXCkyx.HTDZ4dgNYUbh  .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/examples/: optimization-request.json
ml/: .gitignore  README.md  pyproject.toml
ml/analytics/: area_aggregates_chennai_2026-05-25T04-58-47-022Z.json  area_aggregates_chennai_2026-05-25T05-05-36-792Z.json  area_aggregates_chennai_2026-05-26T05-41-11-966Z.json  area_aggregates_chennai_2026-06-03T10-16-57-001Z.json  collection_summary_chennai_2026-05-18T03-25-30-603Z.json  collection_summary_chennai_2026-05-25T04-58-39-505Z.json  collection_summary_chennai_2026-05-25T05-05-24-814Z.json  collection_summary_chennai_2026-05-26T05-41-03-616Z.json  collection_summary_chennai_2026-06-03T10-16-54-618Z.json  model_training_report_2026-05-25T05-05-42-458Z.json  model_training_report_2026-05-26T05-41-17-843Z.json  model_training_report_2026-06-03T10-16-58-792Z.json  preprocessing_summary_chennai_2026-05-25T04-58-47-022Z.json  preprocessing_summary_chennai_2026-05-25T05-05-36-792Z.json  preprocessing_summary_chennai_2026-05-26T05-41-11-966Z.json  preprocessing_summary_chennai_2026-06-03T10-16-57-001Z.json  rider_aggregates_chennai_2026-05-25T04-58-47-022Z.json  rider_aggregates_chennai_2026-05-25T05-05-36-792Z.json  rider_aggregates_chennai_2026-05-26T05-41-11-966Z.json  rider_aggregates_chennai_2026-06-03T10-16-57-001Z.json
ml/models/: eta_xgboost_v1.joblib
ml/rovik_ml/: __init__.py  config.py  etl_telemetry.py  features.py  schemas.py  train_eta_model.py
ml/rovik_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+173 files in other folders)
