[project]
name = "rovik-api"
version = "0.1.0"
description = "ROVIK FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "redis>=5.0.4",
  "python-json-logger>=2.0.7",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "ortools>=9.10.4067",
  "chromadb>=0.4.24",
  "langchain>=0.1.16",
  "langchain-community>=0.0.32"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["routeiq"]
